criando o index da aplicação

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "compression": "^1.6.2",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "mongodb": "^2.2.30",
+    "nconf": "^0.8.4",
+    "winston": "^2.3.1"
   }
 }
