--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "compression": "^1.6.2",
     "express": "^4.15.3",
     "later": "^1.2.0",
+    "moment": "^2.18.1",
     "mongodb": "^2.2.30",
     "nconf": "^0.8.4",
     "tv4": "^1.3.0",
