--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "supertest": "^3.0.0"
   },
   "dependencies": {
+    "async": "^2.5.0",
     "body-parser": "^1.17.2",
     "compression": "^1.6.2",
     "express": "^4.15.3",
