--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "moment": "^2.18.1",
     "mongodb": "^2.2.30",
     "nconf": "^0.8.4",
+    "nock": "^9.0.14",
+    "request": "^2.81.0",
     "tv4": "^1.3.0",
     "uuid": "^3.1.0",
     "winston": "^2.3.1"
