--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "mongodb": "^2.2.30",
+    "morgan": "^1.8.2",
     "nconf": "^0.8.4",
     "nock": "^9.0.14",
     "request": "^2.81.0",
